--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="" />
   </head>
   <body>
+    <nav>
+      <a href="/form/signup">Sign Up</a>
+      <a href="/form/login">Log In</a>
+    </nav>
+    <div id="content">{% block content %} {% endblock %}</div>
+
     <script src="" async defer></script>
   </body>
 </html>
