--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -5,7 +5,8 @@
   <label> username </label>
   <input type="text" name="username" />
   <label> password </label>
-  <input type="text" name="password" />
+  <!-- need to add characters check to password -->
+  <input type="password" name="password" />
   <input type="submit" />
 </form>
 {% endblock%} {% block title%} Log In {%endblock%}
