--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>{% block title %} {% endblock %}</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="" />
@@ -12,7 +12,7 @@
   <body>
     <nav>
       <a href="/form/signup">Sign Up</a>
-      <a href="/form/login">Log In</a>
+      {% block nav %} {% endblock %}
     </nav>
     <div id="content">{% block content %} {% endblock %}</div>
 
