--- a/templates/home.html
+++ b/templates/home.html
@@ -3,5 +3,7 @@
 
 <h2>Hello {{login_user}}</h2>
 {% endblock%} {% block title%} Front Page {%endblock%} {% block nav %} {% if
-login_user != "guest" %} <a href="/logout"> Log Out</a> {% else %}
+login_user != "guest" %} <a href="/logout"> Log Out</a>
+<a href="/{{login_user}}/profile"> Profile</a>
+<a href="/create/community"> Create a Community</a> {% else %}
 <a href="/form/login"> Log In</a>{% endif %} {% endblock%}
