--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,8 +6,13 @@ content %}
   <li>email address: {{ user_information[1]}}</li>
 </ul>
 
+{% for comment in user_c %}
+<p>COMMENT: {{comment[2]}}</p>
+
+{% endfor %}
+<p>{{user_c}}</p>
 {% endblock%} {% block nav %}
 <a href="/logout"> Log Out</a>
-<a href="/{{login_user}}/profile"> Profile</a>
-<a href="/{{login_user}}/create/comment"> Post a comment</a>
+<a href="/{{user_information[0]}}/profile"> Profile</a>
+<a href="/{{user_information[0]}}/create/comment"> Post a comment</a>
 {% endblock%}
