--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <title>{% block title %} {% endblock %}</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="/static/styles.css" />
   </head>
   <body>
     <nav>
