--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,9 @@
   </head>
   <body>
     <nav>
+      <h1 id="logo">Communio.io</h1>
       <a href="/form/signup">Sign Up</a>
+
       {% block nav %} {% endblock %}
     </nav>
     <div id="content">{% block content %} {% endblock %}</div>
