db connection to render server

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,11 +13,10 @@
     <nav>
       <h1 id="logo">Communio.io</h1>
       <a href="/form/signup">Sign Up</a>
+      <a href="/"> Home Page</a>
 
       {% block nav %} {% endblock %}
     </nav>
     <div id="content">{% block content %} {% endblock %}</div>
-
-    <script src="" async defer></script>
   </body>
 </html>
