testing user deletion

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,9 +10,7 @@ content %}
 <div class="post">
   <p>Comment ID: {{comment[0]}}</p>
   <p>COMMENT: {{comment[2]}}</p>
-  <form method="POST" action="/api/comment/delete">
-    <input type="hidden" name="{{comment[2]}}" />
-    <input type="hidden" name="{{comment[0]}}" />
+  <form method="GET" action="/api/{{ comment[0] }}/delete">
     <input type="submit" value="remove" />
   </form>
   <!-- <form method="POST" action="/api/comment/edit">
