--- a/templates/sign_up_form.html
+++ b/templates/sign_up_form.html
@@ -7,7 +7,7 @@
     <label> email </label>
     <input type="text" name="email" />
     <label> password </label>
-    <input type="text" name="password" />
+    <input type="password" name="password" />
     <input type="submit" />
   </form>
 </div>
